--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -10,6 +10,7 @@ body
     height: 500px
     padding: 10px
     background-color: #F8F8F8
+    box-shadow: 0 0 30px 0 rgba(114,114,114,0.5);
     &__rb
         display: flex;
         align-items: center;
@@ -29,8 +30,8 @@ body
             &::before
                 content: "";
                 display: inline-block;
-                width: 16px;
-                height: 16px;
+                width: 20px;
+                height: 18px;
                 margin-right: 10px;
                 position: absolute;
                 left: -10px;
@@ -96,6 +97,12 @@ body
         flex-direction: row
         justify-content: center
         align-items: center
+        p
+            font-family: sans-serif
+        select
+            width: 43px;
+            height: 42px;
+            border-radius: 40px;
     &__results
         display: flex
         flex-direction: column
